css/headerstyle.css
dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
margin: 0;
padding: 0;
}

#branding {
  background: #000000 url('http://theluminarium.net/v4/forum/public/style_images/master/v4/rp.jpg') repeat-x top left;
	min-height: 92px;
}
	
	#logo { display: block; }

#header_bottom {
	background: #000000 url('http://theluminarium.net/v4/forum/public/style_images/master/header_bottom.png') repeat-x top left;
	font-size: 13px;
	padding: 0px 0 0 0;
	height: 26px;
	margin-bottom: 0px;
}	


#mainlogo {
position:absolute;
z-index:1100;
height:395px;
width:575px;
}

	
#menu_head {
 display: block;
 width: 85%;
 height: 92px;
 margin: 0 auto;
 overflow: hidden;

background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#171717), color-stop(100%,black));
background: -moz-linear-gradient(top, bottom, color-stop(0%,#171717), color-stop(100%,black));
background: -moz-linear-gradient( top, rgba(25, 25, 25, 1), rgba(0, 0, 0, 1));

-moz-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
box-shadow: inset 0px 1px 0 rgba(255, 255, 255, 0.2), 0px 1px 4px rgba(0, 0, 0, 0.4);
}

#raleway-font {
	font-family: 'Raleway', sans-serif;	
	margin: 320px 0px 0px 110px;
	font-size:27px;
	color:#FFF;
	padding:4px;
	text-shadow: 0px 1px 2px rgba(0,0,0,90);
}

#whitebar {
 
 color:#fff;
 width: 83%;
 margin: 0px auto 0 auto;
 padding-top:8px;
 padding-left:12px;
 padding-bottom: 9px;
 
 background: -webkit-gradient(
        linear,
        left top,
        left bottom,
        color-stop(0%,rgba(255, 255, 255, 0.26)),
        color-stop(100%,rgba(255, 255, 255, 0))
        );
    
    background: -moz-linear-gradient(
        top,
        rgba(255,255,255,0.26), rgba(255,255,255,0));

    -webkit-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
    -moz-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
    box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
}

.text_des {
display: table-cell;
text-align: center;
height: 92px;
width: 95px;
}

.text_des_inner {
    width: 95px;
    height: 92px;
    }

#box_text {
	background: #000; 
	color: #999;
	font-size: 9px;
	display: inline-block;
	padding: 4px 5px;
	border: 1px solid #111;
	margin: 0px;
	font-size: 15px;
	-webkit-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
	-moz-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
	box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
	text-shadow: 0px 1px 2px rgba(0,0,0,0.3);
}
#box_text:link {
	font-size: 10px;
}
#box_text:hover {
	color: #72b1cf;
	font-size: 10px;
}
.text_des2 {
display: table-cell;
width: 100%;
height: 62px;
padding: 10px;
vertical-align: middle;
text-overflow: ellipsis;
}


#menu_box {
display: table-cell;
width: 344px;
min-width:344px;
height:92px;
    
background: url('http://theluminarium.net/v4/forum/public/style_images/master/menu_box.png') no-repeat top right;
-webkit-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
-moz-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
}    

#menu_box_inner {
width:344px;
min-width:344px;
}

#primary_nav2 {
	background: #000000 url('http://theluminarium.net/v4/forum/public/style_images/master/2ndheader.png') no-repeat top center;
	font-size: 13px;
	padding: 4px 0 0 0;
	height: 500px;
	margin-bottom: 0px;
}
#primary_nav {
	background: #000000no-repeat top left;
	font-size: 13px;
	padding: 4px 0 0 0;
	height: 40px;
	margin-bottom: 0px;
}

#user_navigation { color: #9f9f9f; font-size: 11px; }
#user_navigation a { color: #fff; }
#user_navigation .ipsList_inline li { margin: 0;display: inline;} /* remove spacing from default ipsList_inline */

#user_navigation.not_logged_in {
	height: 26px; padding: 6px 0 4px;
}

#branding, #header_bar, #primary_nav { min-width: 350px; }
/*#header_bar .main_width, #branding .main_width, #primary_nav .main_width { padding: 0 0px; }*/


#content {
	background: #000;
	padding: 10px 10px;
	line-height: 120%;
	-webkit-box-shadow: 0 5px 9px rgba(0,0,0,0.1);
	-moz-box-shadow: 0 5px 9px rgba(0,0,0,0.1);
	box-shadow: 0 5px 9px rgba(0,0,0,0.1);
}

#user_navigation #register_link2 { 
	background: #000; 
	color: #7BC1FF;
	display: inline-block;
	padding: 7px 8px;
	border: 1px solid #111;
	margin: 0px;
	font-size: 15px;
	-webkit-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
	-moz-box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
	box-shadow: inset 0px 1px 0 rgba(255,255,255,0.2), 0px 1px 4px rgba(0,0,0,0.4);
	text-shadow: 0px 1px 2px rgba(0,0,0,0.3);
}

#header_bar {
	background: #000 url('http://theluminarium.net/v4/forum/public/style_images/master/menu_box.png' ) no-repeat top right;
	padding: 0;min-width: 350px;
	text-align: right;
	margin-right: 0px;
	height: 92px;
	max-width: 300px;
	float: right;
	display: inline;
	
}

.ipsUserPhoto_large {
max-width: 92px;
max-height: 92px;
}

.ipsList_inline > li {
	display: inline-block;
	margin: 0 3px;
}
	.ipsList_inline > li:first-child { margin-left: 0; }
	.ipsList_inline > li:last-child { margin-right: 0; }
	.ipsList_inline.ipsList_reset > li:first-child { margin-left: 3px; }
	.ipsList_inline.ipsList_reset > li:last-child { margin-right: 3px; }
	.ipsList_inline.ipsList_nowrap { white-space: nowrap; }

.width_right {
  max-width: 350px;
  height: 92px;
  
}
	
#admin_bar { font-size: 11px; line-height: 36px; }
#admin_bar li.active a { color: #fc6d35; }
#admin_bar a { color: #8a8a8a; }
#admin_bar a:hover { color: #fff; }

